--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 :root {
   --main-bck: #93B5C6;
-  --scnd-bck: #51778a;
+  --scnd-bck: #588ba5;
   --main-text: #4a4d55;
   --main-box: #E4D8DC;
 }
@@ -42,13 +42,13 @@ p {
 }
 
 .small-box {
-  height: 1.2rem;
-  width: 1.7rem;
-  font-size: 0.9rem;
+  height: 1rem;
+  width: 1.5rem;
+  font-size: 0.8rem;
   padding: 0.1rem;
-  background-color: var(--scnd-bck);
-  border: 1px solid var(--main-text);
-  color: white;
+  background-color: var(--main-bck);
+  border: 1.5px solid var(--main-text);
+  color: var(--main-text);
   text-align: center;
   vertical-align: middle;
 
