--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 p {
-  margin: 0;
+  margin: 5px 10px;
   padding: 0;
   color: var(--main-text);
 }
@@ -46,6 +46,11 @@ input:focus {
   display: flex;
   justify-content: center;
   gap: 1rem;
+}
+
+.inner-main-box {
+  font-size: 0.8rem;
+  text-align: left;
 }
 
 .small-box {
